# information-retrieval

./: Cargo.toml
api/: Cargo.toml
api/src/: main.rs
src/: main.rs
ui/: package-lock.json  package.json
ui/src/api/: index.tsx
ui/src/components/FileList/: FileInfo.tsx  FileList.tsx
ui/src/components/FileUpload/: FileUpload.tsx
ui/src/models/: search-response.ts
ui/src/pages/: _app.tsx  index.tsx
