[package]
name = "elastic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.6.1"
actix-web = "4.5.1"
chrono = "0.4.38"
elasticsearch = "8.5.0-alpha.1"
env_logger = "0.11.3"
futures = "0.3.30"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
